Left-align post titles; resolves #17

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -828,9 +828,9 @@ dd {
 }
 
 .post .postTitle {
-	text-align:center;
-	margin-top:2rem;
-	margin-bottom:1rem
+	text-align: left;
+	margin-top: 2rem;
+	margin-bottom: 1rem
 }
 
 .post blockquote {
